# kafka-hooks

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: publish-image.yml
src/kafka_hooks/: main.py
src/kafka_hooks/api/: routes.py
src/kafka_hooks/core/: config.py  logging.py
src/kafka_hooks/providers/: __init__.py  base.py  github.py
src/kafka_hooks/services/: github.py  kafka.py  routing.py
tests/: test_github.py  test_routes.py
