[project]
name = "kafka-hooks"
version = "0.0.1"
description = "FastAPI GitHub webhook ingress that publishes normalized events to Kafka."
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.14.0,<0.15.0",
    "fastapi>=0.136.3,<0.137.0",
    "pydantic>=2.13.4,<3.0.0",
    "pydantic-settings>=2.14.1,<3.0.0",
    "uvicorn[standard]>=0.48.0,<0.49.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1,<0.29.0",
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.4.0,<2.0.0",
]
lint = [
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kafka_hooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "SIM", "UP"]
